# loggingcpp

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  logging.cpp  logging.h  main.cpp  run_test.sh
.github/workflows/: cmake.yml  docker-image.yml
test/: CMakeLists.txt  fixture.hpp  formatingTest.hpp  mainTest.cpp  outputTest.hpp
